# swagger.json
@@ -25,11 +25,48 @@
       "description": "Question Controller Api"
     },
     {
+      "name": "room",
+      "description": "Room Controller Api"
+    },
+    {
       "name": "token",
       "description": "Token Controller Api"
     }
   ],
   "paths": {
+    "/room/pair": {
+      "post": {
+        "tags": [
+          "room"
+        ],
+        "summary": "Create a pair",
+        "consumes": [
+          "application/json"
+        ],
+        "requestBody": {
+          "description": "Create a pair",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/pair"
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "房間建立成功"
+          },
+          "400": {
+            "description": "此會員已在房間內"
+          }
+        }
+      }
+    },
     "/member/client/add": {
       "post": {
         "tags": [
@@ -138,6 +175,48 @@
         }
       }
     },
+    "/client/cs/recent": {
+      "get": {
+        "tags": [
+          "client"
+        ],
+        "summary": "Get client recent customer service",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "member_id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "member_id為客戶端id(必填)"
+          },
+          {
+            "in": "query",
+            "name": "resource_id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "resource_id為來源id(必填)"
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功"
+          },
+          "204": {
+            "description": "無匹配資料"
+          }
+        }
+      }
+    },
     "/question": {
       "get": {
         "tags": [
@@ -213,6 +292,20 @@
     }
   },
   "definitions": {
+    "pair": {
+      "type": "object",
+      "properties": {
+        "client_id": {
+          "type": "number"
+        },
+        "cs_id": {
+          "type": "number"
+        },
+        "resource_id": {
+          "type": "number"
+        }
+      }
+    },
     "member": {
       "type": "object",
       "properties": {
